Left align tooltip content. Issue: #688

--- a/static/css/theme.less
+++ b/static/css/theme.less
@@ -11,3 +11,7 @@
 .select2-search-choice-close {
   top: 3px;
 }
+
+.tooltip .tooltip-inner {
+  text-align: left;
+}
